--- a/src/style/_fields.scss
+++ b/src/style/_fields.scss
@@ -88,12 +88,12 @@
   }
 }
 
-
+/* Title */
 .ola-field-title {
-  font-size: 20px;
   margin: 0;
 }
 
+/* URL */
 .ola-field-url {
   font-size: 13px;
   color: #666;
