--- a/src/style/_form.scss
+++ b/src/style/_form.scss
@@ -7,3 +7,10 @@
     font-size: 16px;
   }
 }
+
+/* Text input */
+.ola-text-input {
+  padding: 10px 10px;
+  font-size: $base-font-size;
+  width: 100%;
+}
