--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -1,5 +1,26 @@
+@import 'variables';
 @import 'mixins';
+@import 'reset';
+@import 'base';
+@import 'fonts';
+@import 'shared';
+@import 'buttons';
+
+/* Third party */
+@import 'hint';
 @import 'datepicker';
+@import 'slider';
+
 @import 'fields';
 @import 'form';
+@import 'sidebar';
 @import 'snippet';
+@import 'contenteditable';
+@import 'autocomplete';
+@import 'tags';
+@import 'pagination';
+@import 'typography';
+
+/* Layout */
+@import 'layout';
+@import 'facet';
