--- a/src/style/_snippet.scss
+++ b/src/style/_snippet.scss
@@ -1,12 +1,10 @@
-/**
- * RTL snippet
- */
+/* Snippet */
+.ola-snippet {
+  padding: 1em 0;
+  border-bottom: 1px $base-border-color solid;
 
-.ola-snippet-lang-ps {
-  direction: rtl;
-
+  /* Remove bookmarks in snippets */
   .ola-link-bookmark-action {
-    left: 0;
-    right: auto;
+    display: none;
   }
 }
