--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -63,3 +63,28 @@ $breakpoints: (
     clear: both;
   }
 }
+
+/* Ola button */
+%ola-button {
+  border: none;
+  background: none;
+  border-radius: 0;
+  cursor: pointer;
+  min-width: $button-icon-width;
+  color: $base-color;
+  padding: 0;
+  text-align: center;
+  font-weight: normal;
+
+  &:disabled {
+    opacity: 0.6;
+  }
+
+  &:before {
+    vertical-align: middle;
+  }
+
+  &:hover, &:active, &:focus {
+    background: none;
+  }
+}
