--- a/src/style/_pagination.scss
+++ b/src/style/_pagination.scss
@@ -3,6 +3,8 @@
 }
 
   .ola-page{
+    @extend %ola-button;
+    min-width: 0;
     display: inline-block;
     padding: 5px 10px;
     vertical-align: top;
@@ -12,6 +14,7 @@
     background: none;
     border: 1px #eee solid;
     cursor: pointer;
+    color: $base-color;
     margin-right: -1px;
     border-radius: 0;    
 
@@ -70,5 +73,5 @@
 /* Disable */
 
 .ola-page-disabled{
-  opacity: 0.1;
+  opacity: 0.5;
 }
