--- a/src/style/_sidebar.scss
+++ b/src/style/_sidebar.scss
@@ -1,5 +1,108 @@
 /* Sidebar */
 .ola-sidebar {
-  width: 300px;
-  padding-right: 1rem;
+  position: fixed;
+  z-index: 13;
+  right: 0;
+  top: 16px;
+  left: 16px;
+  right: 16px;
+  bottom: 16px;
+  background: #fff;
+  visibility: hidden;
+  @include prefix(transform, translate3d(110%, 0, 0), webkit ms moz);
+  // @include prefix(transition, translate3d 0.3s ease-in-out, webkit ms moz);
+  @include prefix(display, flex, webkit ms moz);
+  @include prefix(flex-direction, column, webkit ms moz); 
+
+  /* Filters */
+  .ola-search-filters {
+    max-height: calc(100% - 60px);
+    flex: 1;
+    overflow: auto;
+    padding: 1em;
+
+    @include media (desktop) {
+      padding: 0;
+      max-height: none;
+      overflow: visible;
+    }
+  }
+
+  .ola-sidebar-open &{
+    @include prefix(transform, translate3d(0%, 0, 0), webkit ms moz);
+    visibility: visible;
+    background-color: white;
+
+    /* On desktop */
+    @include media(desktop){
+      width: 340px;
+      max-height: none;
+      margin: 0;
+      visibility: visible;
+      max-width: 35%;
+      top: auto;
+      right: auto;
+      bottom: auto;
+      left: auto;
+      padding-right: 1.5rem;
+      vertical-align: top;
+      transform: translate3d(0, 0, 0);
+      position: relative;
+      padding-left: 0;
+      z-index: 0;
+      background-color: transparent;
+      display: block;
+    }
+  }
+}
+
+/* Sidebar filter button */
+.ola-link-open-filter, .ola-close-sidebar {
+  @extend %ola-button;
+}
+
+/* Hide close sidebar on mobile */
+.ola-close-sidebar {
+  @include media (desktop) {
+    display: none;
+  }
+}
+
+/* Open Filter */
+.ola-link-open-filter {
+  float: right;
+	border: 1px #ccc solid;
+  background: none;
+  font-size: 13px;
+  text-transform: uppercase;
+	text-align: center;
+  position: relative;
+  margin: 0 0 0 1rem;
+  // float: right;
+  height: 40px;
+
+  &:hover, &:active, &:focus, &.ola-link-open-filter-active {
+    background: $brand-color;
+    border-color: white;
+    color: white;
+  }
+
+  &:before {
+    @extend .iconfont;
+    content: 'tune';
+  }
+
+	span{
+		display: none;
+	}
+}
+
+/* Close sidebar */
+.ola-close-sidebar {
+  &, &:hover, &:focus, &:active {
+    background: $link-color;
+    color: white;
+    height: 60px;
+    border-radius: 0;
+  }
 }
