--- a/src/style/_typography.scss
+++ b/src/style/_typography.scss
@@ -3,10 +3,9 @@
 .ola-search-heading {
   margin: 0;
   border-bottom: 2px solid #e5e5e5;
-  margin-right: 1rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  margin-bottom: 1rem;
+  padding: 0 0 1rem 0;
+  margin: 0 0 1rem 0;
+  clear: inherit;
 
   @include media (tablet) {
     margin-bottom: 1rem;
@@ -20,5 +19,10 @@
 
 /* Number */
 .ola-search-heading-number {
-  font-weight: 300;  
+  font-weight: 300;
+  display: block;
+
+  @include media (tablet) {
+    display: inline;
+  }
 }
