--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,8 +1,9 @@
 $base-color: #333;
 $base-font-size: 16px;
-$base-font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+$base-font-family: Helvetica,Arial,sans-serif;
 $base-border-color: #ddd;
 $base-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+$base-grey-color: #888;
 
 /* Brand */
 $brand-color: #002569;
@@ -19,7 +20,7 @@ $button-primary-color: white;
 $button-icon-width: 40px;
 
 /* Search button */
-$button-search-width: 50px;
+$button-search-width: 40px;
 
 /* Geo button */
 $button-geo-active-color: red;
@@ -30,3 +31,6 @@ $is_link_underlined: false;
 /* Autocomplete */
 $autocomplete-box-shadow: $base-box-shadow;
 $autocomplete-border-color: #ccc;
+
+/* Facet */
+$facet-padding: 4px 0;
