--- a/src/style/_fields.scss
+++ b/src/style/_fields.scss
@@ -32,9 +32,9 @@
 }
 
 .ola-field-component-label {
-  color: #777;
-  font-size: 14px;
-  font-family: 'Ideal Sans A',sans-serif;
+  color: $base-grey-color;
+  font-size: 0.875rem;
+  padding-bottom: 0.25rem;
 }
 
 
