--- a/src/style/_tags.scss
+++ b/src/style/_tags.scss
@@ -66,6 +66,11 @@
     display: none;
   }
 
+  &:hover {
+    background-color: $base-grey-color;
+    color: white;
+  }
+
 	&:before{
 		@extend .iconfont;
     content: "close";
