--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -34,3 +34,7 @@ $autocomplete-border-color: #ccc;
 
 /* Facet */
 $facet-padding: 4px 0;
+
+/* Pagination */
+$pagination-button-width: 40px;
+$pagination-button-height: 40px;
