--- a/src/style/_contenteditable.scss
+++ b/src/style/_contenteditable.scss
@@ -33,6 +33,6 @@
   padding: 2px 0;
   cursor: pointer;
   border-radius: 3px;
-  background: #eef7fd !important;
+  background: $input-tag-bg !important;
   outline: 1px #888 dashed;
 }
