--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -30,6 +30,10 @@
 /* Layout */
 @import 'layout';
 @import 'facet';
+@import 'view';
 
 /* Onboarding */
 @import 'onboarding';
+
+/* Answer */
+@import 'answer';
