--- a/src/style/_autocomplete.scss
+++ b/src/style/_autocomplete.scss
@@ -60,6 +60,12 @@
     outline: none;
   }
 
+  /* Button inside */
+  .ola-search-button {
+    margin-top: -1px;
+    margin-bottom: -1px;
+  }
+
   .ola-autosuggest-focus & {
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(3,173,224,.6);
     border-color: #03ade0;
@@ -150,3 +156,28 @@
     }
   }
 }
+
+/* Suggestion help */
+.ola-suggestions-help {
+  text-align: right;
+  padding: 0 8px;
+  font-size: 11px;
+  line-height: 1;
+  color: $base-grey-color;
+  position: absolute;
+  right: 0;
+  top: 5px;
+}
+
+  /* Clear suggestions */
+  .ola-suggestions-clear {
+    padding-left: 5px;
+    cursor: pointer;
+
+    &:before {
+      content: '('
+    }
+    &:after {
+      content: ')'
+    }
+  }
