--- a/src/style/_fields.scss
+++ b/src/style/_fields.scss
@@ -3,7 +3,7 @@
  */
 
 .ola-field {
-  padding-bottom: 8px;
+  padding-bottom: $field-bottom-padding;
 }
 
 .ola-field-img {
@@ -90,17 +90,18 @@
 
 /* Title */
 .ola-field-title {
-  margin: 0 0 0.5rem 0;
-  padding: 0;
+  margin: 0;
+  padding: 0 0 $field-bottom-padding 0;
   font-weight: normal;
+  font-size: $field-title-font-size;
 }
 
 /* URL */
 a.ola-field-url {
   font-size: 13px;
-  color: #666;
+  color: $base-grey-color;
   display: block;
-
+  padding-bottom: 0;
 
   /* These are technically the same, but use both */
   overflow-wrap: break-word;
@@ -122,6 +123,9 @@ a.ola-field-url {
 /* Snippet: Events|Articles */
 /* Date-Date-TextField */
 .ola-fg-horizontal {
+  .ola-field {
+    padding-right: 0.5rem;
+  }
   &.Date-Date-TextField, &.Date-TextField {
     line-height: 1;
     font-size: 14px;
@@ -133,7 +137,7 @@ a.ola-field-url {
     }
 
     .ola-field-date+.ola-field-date {
-      padding-left: 8px;
+      // padding-left: 8px;
       &:before {
         content: '-';
         padding-right: 8px;
@@ -143,8 +147,22 @@ a.ola-field-url {
     .ola-field-text {
       border-left: 1px solid $base-grey-color;
       margin-left: 8px;
-      padding-left: 8px;
+      padding-left: 1rem;
       padding-bottom: 0;
     }
+  }
+  
+}
+
+/* Distance */
+.ola-field-distance {
+  display: inline;
+  color: $base-grey-color;
+  font-size: 0.8rem;
+  &:before {
+    content: ' (';
+  }
+  &:after {
+    content: ') '
   }
 }
