--- a/src/style/_sidebar.scss
+++ b/src/style/_sidebar.scss
@@ -79,7 +79,7 @@
   position: relative;
   margin: 0 0 0 5px;
   // float: right;
-  height: 40px;
+  // height: 40px;
 
   & {
     color: $brand-color;
