--- a/src/style/_tags.scss
+++ b/src/style/_tags.scss
@@ -81,11 +81,11 @@
 
 /* Input tag */
 .ola-input-tag {
-  padding: 2px 0;
+  padding: 2px 2px;
   cursor: pointer;
   border-radius: 3px;
-  // background: $input-tag-bg !important;
-  // outline: 1px #888 dashed;
+  background: #c0e2f8;
+  margin: 0 -2px;
 }
 
 
