--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -22,6 +22,7 @@ $button-icon-width: 45px;
 
 /* Search button */
 $button-search-width: 40px;
+$button-default-height: 40px;
 
 /* Geo button */
 $button-geo-active-color: #F44336;
