--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -1,7 +1,10 @@
 /* Container */
 .ola-results-flex {
   display: flex;
-  padding-top: 1em;
+
+  @include media (tablet) {
+    padding-top: 1rem;
+  }
 }
 
   /* Results container */
