Re-org components

--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -7,10 +7,10 @@
   }
 
   a {
-    color: $link-color;
+    // color: $link-color;
 
     &:hover {
-      color: $link-hover-color;
+      // color: $link-hover-color;
     }
   }
 
