--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -65,7 +65,7 @@ $breakpoints: (
 }
 
 /* Ola button */
-%ola-button {
+%ola-icon-button {
   border: none;
   background: none;
   border-radius: 0;
