--- a/src/style/_tags.scss
+++ b/src/style/_tags.scss
@@ -47,7 +47,7 @@
  */
 
 .ola-facet-tag-remove{
-  @extend %ola-button;
+  @extend %ola-icon-button;
 	color: $base-color;
   min-width: 26px;
 	text-align: center;
