--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -1,11 +1,23 @@
+/* Default button */
+.ola-btn {
+  &, &:hover, &:active, &:focus {
+    background: $button-primary-background;
+    color: $button-primary-color;
+    padding: $button-padding;
+    cursor: pointer;
+  }
+}
+
+/* Primary button */
+
 /* Common button styles */
 .ola-icon-button {
-  @extend %ola-button;
+  @extend %ola-icon-button;
 }
 
 /* Search button */
 .ola-search-button {
-  @extend %ola-button;
+  @extend %ola-icon-button;
   color: $button-primary-color;
   width: $button-search-width;
 
@@ -30,7 +42,7 @@
 
 /* Geo location icon */
 .ola-link-geo {
-  @extend %ola-button;
+  @extend %ola-icon-button;
 
   &:before {
     @extend .iconfont;
@@ -44,7 +56,7 @@
 
 /* bookmarking */
 .ola-link-bookmark, .ola-link-bookmark-action {
-  @extend %ola-button;
+  @extend %ola-icon-button;
   height: 100%; /* Its inside a flex box */
 
   &:before {
@@ -66,7 +78,7 @@
 
 /* Clear button */
 .ola-clear-button {
-  @extend %ola-button;
+  @extend %ola-icon-button;
 
   &:before {
     @extend .iconfont;
@@ -77,7 +89,7 @@
 /* Load more */
 
 .ola-link-load-more {
-  @extend %ola-button;
+  @extend %ola-icon-button;
   @extend .ola-primary-button;
   width: 100%;
   // border: 1px $base-border-color solid;
@@ -89,7 +101,7 @@
 
 /* Spell links */
 .ola-spell-links {
-  @extend %ola-button;
+  @extend %ola-icon-button;
   color: $link-color;
   margin-left: 0.5rem;
   font-weight: bold;
@@ -112,6 +124,6 @@
 
 
 /* regular button */
-.ola-btn {
-  @extend %ola-button;
+.ola-icon-btn {
+  @extend %ola-icon-button;
 }
