--- a/src/style/_pagination.scss
+++ b/src/style/_pagination.scss
@@ -4,7 +4,7 @@
 }
 
   .ola-page{
-    @extend %ola-button;
+    @extend %ola-icon-button;
     min-width: 0;
     padding: 5px 10px;
     vertical-align: top;
