--- a/src/style/_contenteditable.scss
+++ b/src/style/_contenteditable.scss
@@ -27,7 +27,7 @@
   white-space: pre;
   color: transparent;
   padding: 10px;
-  line-height: 1;
+  line-height: normal;
   font-size: $autocomplete-font-size;
   display: none;
 
