--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,6 +1,6 @@
 $base-color: #333;
 $base-font-size: 16px;
-$base-font-family: Arial, Helvetica, sans-serif;
+$base-font-family: Helvetica, Arial, sans-serif;
 $base-border-color: #ddd;
 $base-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
 $base-grey-color: #888;
