--- a/src/style/_fields.scss
+++ b/src/style/_fields.scss
@@ -7,18 +7,12 @@
 }
 
 .ola-field-img {
-  border: 1px rgba(0,0,0,0.1) solid;
   display: block;
-  width: 80px;
-  padding-bottom: 0;
-  margin-bottom: 8px;
+  padding: 0;
+  margin-bottom: 1rem;
 
   @include media (tablet) {
     width: 180px;
-  }
-
-  .ola-fg-horizontal & {
-    margin-right: 1em;
   }
 
   img {
@@ -43,17 +37,19 @@
  */
 
 .ola-fg-horizontal {
-  @include flexbox;
+  @include media (tablet) {
+    @include flexbox;
 
-  > .ola-fg {
-    padding: 0 0.5em 0 0;
+    > .ola-fg {
+      padding: 0 0.5em 0 0;
 
-    &:first-child {
-      padding-left: 0;
-    }
+      &:first-child {
+        padding-left: 0;
+      }
 
-    &:last-child {
-      padding-right: 0;
+      &:last-child {
+        padding-right: 0;
+      }
     }
   }
 }
@@ -119,9 +115,9 @@ a.ola-field-url {
 /* Snippet: Events|Articles */
 /* Date-Date-TextField */
 .ola-fg-horizontal {
-  .ola-field {
-    padding-right: 0.5rem;
-  }
+  // .ola-field {
+  //   padding-right: 0.5rem;
+  // }
   &.Date-Date-TextField, &.Date-TextField {
     line-height: 1;
     font-size: 14px;
@@ -161,4 +157,9 @@ a.ola-field-url {
   &:after {
     content: ') '
   }
+}
+
+/* Button */
+.ola-field-button {
+  
 }
