--- a/src/style/_snippet.scss
+++ b/src/style/_snippet.scss
@@ -2,17 +2,17 @@
 .ola-snippet {
   // padding: 1em 0;
   margin-bottom: 1em;
-  // border-bottom: 1px $base-border-color solid;
-
-  .ola-snippet-inner {
-    box-shadow: $elevation-2;
-    padding: 1em;
-  }
 
   /* Remove bookmarks in snippets */
   .ola-link-bookmark-action {
     display: none;
   }
+}
+
+/* Inner wrapper */
+.ola-snippet-inner {
+  box-shadow: $elevation-2;
+  padding: 1em;
 }
 
 /* Highlight */
@@ -55,9 +55,15 @@
 /* MC answer snippet */
 .ola-snippet-mc {
   margin-bottom: 2rem;
+
+  .ola-results-view-grid &  {
+    width: auto;
+    padding-right: 0;
+  }
+
   .ola-field-title {
-    font-size: 20px;
-    padding: 0;
+    // font-size: 20px;
+    padding: 0 0 0.5rem 0;
   }
 
   .ola-snippet-text {
