--- a/src/style/_snippet.scss
+++ b/src/style/_snippet.scss
@@ -71,4 +71,13 @@
       content: '...'
     }
   }
+
+  strong {
+    text-decoration: underline;
+  }
+}
+
+/* Snippet text */
+.ola-snippet-text {
+  margin: 0 0 0.5rem 0;
 }
