--- a/src/style/_answer.scss
+++ b/src/style/_answer.scss
@@ -1,11 +1,11 @@
 /* Tokens */
-.ola-answer-tokens {
+.ola-answer-slots {
   padding: 0.5rem 0 1em 0;
   font-size: 0.875rem;
 }
 
 /* Token */
-.ola-btn-token-add {
+.ola-btn-slot-add {
   &, &:hover, &:focus, &:active {
     background: darken($input-tag-bg, 10%);
     padding: 8px 12px;    
@@ -32,7 +32,7 @@
 }
 
 /* Answer token text */
-.ola-answer-tokens-text {
+.ola-answer-slots-text {
   display: block;
   @include media (tablet) {
     display: inline;
