--- a/src/style/_progress.scss
+++ b/src/style/_progress.scss
@@ -38,7 +38,7 @@
 }
 .react-progress-bar-percent {
   height: 4px;
-  background: $brand-color;
+  background: $progress-bar-color;
   // box-shadow: 0 0 10px #29d, 0 0 5px #29d;
   transition: all .2s ease
 }
