--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -67,7 +67,7 @@
   */
 
   img {
-    border-style: none;
+    // border-style: none;
   }
 
   /**
@@ -93,6 +93,10 @@
   textarea {
     // font-family: sans-serif; /* 1 */
     // font-size: 100%; /* 1 */
+    // line-height: 1.15; /* 1 */
+    // margin: 0; /* 2 */
+    font-family: sans-serif; /* 1 */
+    font-size: 100%; /* 1 */
     line-height: 1.15; /* 1 */
     // margin: 0; /* 2 */
   }
