--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,6 +1,6 @@
 $base-color: #333;
 $base-font-size: 16px;
-$base-font-family: Helvetica, Arial, sans-serif !default;
+$base-font-family:  'Lato', 'Open Sans', sans-serif;
 $base-line-height: 1.5;
 $base-border-color: #ddd;
 $base-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
