--- a/style/_base.scss
+++ b/style/_base.scss
@@ -21,9 +21,9 @@
  * Remove when deploying
  */
 body {
-  // font-family: $base-font-family;
-  // padding: 3rem;
-  // margin: 0;
+  font-family: $base-font-family;
+  padding: 3rem;
+  margin: 0;
 }
 
 /* Iframe */
