--- a/style/_autocomplete.scss
+++ b/style/_autocomplete.scss
@@ -17,6 +17,7 @@
   top: 100%;
   z-index: 1;
   margin-top: -1px;
+  font-family: inherit;
 
   .ola-spell-suggestions{
     padding: 1em;
@@ -79,6 +80,7 @@
 	background-color: transparent !important;
 	position: relative;
  height: $button-default-height;
+ font-family: inherit;
 }
 
 /* Text shadow */
