--- a/style/_contenteditable.scss
+++ b/style/_contenteditable.scss
@@ -9,7 +9,7 @@
 .ContentEditableWrapper .ola-text-input {
   position: relative;
   z-index: 1;
-  // font-family: $base-font-family;
+  font-family: inherit;
   &:focus {
     outline: none;
     border: none;
