--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -81,3 +81,10 @@ $elevation-4: 0 0 0 1px rgba(16, 22, 26, 0.1),
 0 4px 8px rgba(16, 22, 26, 0.2),
 0 18px 46px 6px rgba(16, 22, 26, 0.2) !default;
 $snippet-shadow: 0 1px 3px rgba(0,0,0,0.3) !default;
+
+/* Pill */
+$pill-border-radius: 0px;
+$pill-padding: 0.5rem 1rem;
+$pill-background: #eee;
+$pill-color: $base-color;
+$pill-font-size: 0.875rem;
